(lang dune 3.3)

(name rho_format)

(generate_opam_files true)

(source
 (github Isaac-DeFrain/rho-format))

(authors "Isaac DeFrain")

(maintainers "Isaac DeFrain")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name rho_format)
 (synopsis "AST-based formatter for Rholang")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
